# Neko_Throne

./: .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  README.md  README_zh.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  routing_issue.yml
.github/workflows/: main_ci.yml
cmake/: QHotkey.cmake  arch_enforce.cmake  gui_modern.cmake
core/server/: go.mod  server.go  test_utils.go
core/server/internal/boxdns/winipcfg/: netsh.go  types.go  types_32.go  types_64.go  types_test_32.go  types_test_64.go  winipcfg_test.go
docs/: FINAL_REPORT.md  H3_DNS_IMPLEMENTATION.md  PRIVACY_SECURITY.md  SECURITY_AUDIT.md  TORRENT_PROTECTION.md
include/configs/: generate.h
include/configs/outbounds/: wireguard.h
include/configs/proxy/: Preset.hpp
include/dataStore/: RouteEntity.h
include/global/: DataStore.hpp
include/stats/connections/: connectionLister.hpp
include/stats/traffic/: TrafficLooper.hpp
include/sys/: CoreManager.hpp  NetworkLeakGuard.hpp  ProxyStateManager.hpp
include/ui/: mainwindow.h
include/ui/setting/: RouteItem.ui  dialog_basic_settings.h  dialog_hotkey.h  dialog_manage_routes.h  dialog_manage_routes.ui  dialog_vpn_settings.h  dialog_vpn_settings.ui
res/translations/: README.md  fa_IR.ts  ru_RU.ts  zh_CN.ts
script/: build_go.sh  deploy_linux64.sh  deploy_windows.sh  pack_debian.sh
scripts/ci/: lint.sh  release_pack.sh  requirements-qt.txt  setup_go.sh
src/: main.cpp
src/api/: RPC.cpp
src/configs/: generate.cpp
src/configs/common/: xrayStreamSetting.cpp
src/configs/outbounds/: hysteria.cpp  socks.cpp  wireguard.cpp  xrayVless.cpp
src/configs/proxy/: Bean2CoreObj_box.cpp
src/configs/sub/: GroupUpdater.cpp  clash.cpp  warp.cpp
src/dataStore/: RouteEntity.cpp
src/global/: Configs.cpp  DeviceDetailsHelper.cpp  Utils.cpp
src/stats/connectionLister/: connectionLister.cpp
src/stats/traffic/: TrafficLooper.cpp
src/sys/: AutoRun.cpp  CoreManager.cpp  NetworkLeakGuard.cpp  Process.cpp  ProxyStateManager.cpp
src/sys/platform/: TitleBar_linux.cpp
src/ui/: mainwindow.cpp  mainwindow_rpc.cpp
src/ui/core/: TranslationManager.cpp
src/ui/profile/: ProxyItem.cpp
src/ui/setting/: RouteItem.cpp  dialog_basic_settings.cpp  dialog_hotkey.cpp  dialog_manage_routes.cpp  dialog_vpn_settings.cpp
